# youtube_RAG

./: .env.example  .gitignore  LICENSE  README.md  cookies.txt  logger.py  main.py  mermaid.md  models.py  pyproject.toml  rag_service.py  start.sh  transcript.py
alembic/: env.py
alembic/versions/: f96ddbf9c72d_create_notes_and_summaries_tables.py
src/: __init__.py  bootstrap.py
src/api/: __init__.py  app.py  dependencies.py  routes.py  schemas.py
src/api/routers/: notes.py  rag.py  summaries.py
src/application/: services.py
src/domain/: __init__.py  models.py  ports.py
src/infrastructure/: config.py  logging.py  text_splitter.py
src/infrastructure/auth/: security.py
src/infrastructure/database/: db.py  db_models.py
src/infrastructure/llm/: common.py  ollama.py  openai.py
src/infrastructure/transcripts/: __init__.py  ytdlp.py
src/infrastructure/vectorstores/: chroma.py  pinecone.py
tests/: test_application_service.py
